# forest_cover_prediction_1

./: .gitignore  README.md  pyproject.toml  setup.py
src/forest_cover_ml/: auto_logistic.py  auto_ridge.py  data.py  logistic.py  noxfile.py  pipeline.py  profile.py  ridge.py
tests/: test_train.py
