[tool.poetry]
name = "forest_cover_ml"
version = "0.1.0"
description = "Final(forest cover prediction) project for RS School Machine Learning course"
authors = ["kate.chubarova <katechubarova@gmail.com>"]

[tool.poetry.scripts]
train_logistic = "forest_cover_ml.logistic:train"
train_ridge = "forest_cover_ml.ridge:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.3.5"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
mlflow = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"